<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">Telecine</string>
  <string name="launcher_name">@string/app_name</string>

  <string name="clear">Clear</string>
  <string name="record">Record</string>
  <string name="countdown_one">1…</string>
  <string name="countdown_two">2…</string>
  <string name="countdown_three">3…</string>
  <string name="launch_overlay">Launch Overlay</string>
  <string name="remove_task">Close and remove from recents</string>
  <string name="Preferences">Preferences</string>
  <string name="countdown">Three second countdown</string>
  <string name="recents_hide">Hide from recent apps</string>
  <string name="video_quality">Video quality</string>
</resources>
